--- a/src/ElearningBundle/Resources/config/doctrine/Relationship.orm.yml
+++ b/src/ElearningBundle/Resources/config/doctrine/Relationship.orm.yml
@@ -19,7 +19,7 @@ ElearningBundle\Entity\Relationship:
                 timestampable:
                     on: update
     lifecycleCallbacks: {  }
-    oneToOne:
+    manyToOne:
         follower:
             targetEntity: User
             joinColumn:
